--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -11,8 +11,9 @@ workflows:
             xcode: latest
             cocoapods: default
         scripts:
-            - xcode-project build-ipa --project "MyXcodeProject.xcodeproj" --scheme "MyScheme"
-        artifacts:
-             - build/ios/ipa/*.ipa
-             - /tmp/xcodebuild_logs/*.log
-             - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
+             xcode-project build-ipa --workspace "$XCODE_WORKSPACE" --scheme "$XCODE_SCHEME"
+   artifacts:
+      - build/ios/ipa/*.ipa
+      - /tmp/xcodebuild_logs/*.log
+      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
+       
