--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -11,7 +11,7 @@ workflows:
             xcode: latest
             cocoapods: default
         scripts:
-             xcode-project build-ipa --workspace "$XCODE_WORKSPACE" --scheme "$XCODE_SCHEME"
+            - xcode-project build-ipa --project "keysq8.xcodeproj" --scheme "MyScheme"
    artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
