--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,5 +14,6 @@ workflows:
            
             - xcodebuild build -project "MyXcodeProject.xcodeproj" -scheme "MyScheme" CODE_SIGN_INDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
         artifacts:
-            - build/ios/ipa/*.ipa
+            $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
+            $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
             
