--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -12,7 +12,7 @@ workflows:
             cocoapods: default
         scripts:
            
-            - xcodebuild build -project "MyXcodeProject.xcodeproj" -scheme "MyScheme" CODE_SIGN_INDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
+            - xcode-project build-ipa --project "MyXcodeProject.xcodeproj" --scheme "MyScheme"
         artifacts:
             - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
             - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
